--- a/Working Folder/Version 3 - Final/Project 1 Group 1 Tutorial - v3.Rmd
+++ b/Working Folder/Version 3 - Final/Project 1 Group 1 Tutorial - v3.Rmd
@@ -10,6 +10,11 @@ Tutorial: An Introduction to Data Preparation, Exploration, and Analysis
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+## Target Audience
+
+Our target audience for this project are fellow BIOL 364 students. Students in this class generally have had a brief introduction or previous exposure to R software. Therefore, the goal of this proposal is to walk students though a data modeling tutorial, including basic R housekeeping, but not go extremely in-depth in the explanation for all coding language. This tutorial assumes the individual has some previous R experience. 
+
+
 ## Tutorial introduction 
 
 Do you have a dataset but you're not sure where to start with analysis? This tutorial is for you! Utilizing an Iris data set, you will start by learning how to import, classify, and organize your data to prepare it for use. You will then perform some base level data exploration by looking at your variable's distributions assessing for normalcy, and transforming as necessary. Finally, you will develop and explore a question about the relationships between the variables presented in the data. Using this question, you will learn some of the different statistical tests that can be run, why these tests are run, and data visualization. 
@@ -66,7 +71,7 @@ iris.raw.data <- read.csv(url("https://raw.githubusercontent.com/Bucknell-Biol36
 *Citation for the dataset: https://www.kaggle.com/datasets/samybaladram/iris-dataset-extended?select=iris_extended.csv*
 
 
-After loading in a dataset, you always want to make sure that everything loaded in properly. To do this, check the top and bottom of your data, and the number of observations you have imported. The data on GitHub reports 1200 lines of data, in our environment the data should read 1200 observations as there is one line for column headings.
+After loading in a dataset, you always want to make sure that everything loaded in properly. To do this, check the top and bottom of your data (head() and tail()), and the number of observations you have imported (nrow()). The data on GitHub reports 1200 lines of data, in our environment the data should read 1200 observations as there is one line for column headings.
 
 ```{r}
 head(iris.raw.data)
@@ -76,7 +81,13 @@ nrow(iris.raw.data)
 
 This shows us that there are 1200 rows of data which aligns with the expectation of 1200 lines of data according to Github.
 
-It is important to understand the structure of the raw data as it will impact how you prepare for analysis. To do so:
+
+## Check for NAs in the data 
+
+We should start be checking for for NAs in the dataset. NAs within the set mean that there are missing data values. Missing data values can make the row containing the NA less useful to us as the missing information could skew our tests. It is important to consider how dropping NAs might affect your analysis, for instance is the NA in a section of the data that you are not looking to analyze? Consider the possible reasons you might want or not want to drop NAs before doing so. 
+In this dataset there are no NAs. If there were though and we did want to remove them, we could use the function `drop_na()` to omit those rows.
+
+It is important to understand the structure of the raw data as it will impact how you prepare for analysis. To do so, use the glimpse() function which summarizes the general structure of the dataset:
 
 ```{r}
 glimpse(iris.raw.data)
@@ -97,6 +108,8 @@ sepal_length, sepal_width, petal_length, petal_width, sepal_area, , sepal_aspect
 
 **Factoring:** - the process of converting a variable into a factor, which is a data type used to represent categorical data. Factors store both the unique categories (called levels) and the values that belong to those categories. Factoring is commonly used when you want to classify data into distinct groups, such as types, species, or categories, for statistical modeling or analysis.
 
+Below, the mutate function allows one to manipulate previously existing variables in a dataframe (i.e. change a variable into a factor as demonstrated below). The mutate() function can be used to manipulate pre-existing variables or generate new columns of data. 
+
 ```{r}
 iris.raw.data <- iris.raw.data |> 
   mutate(soil_type = as.factor(soil_type),
@@ -106,7 +119,7 @@ summary(iris.raw.data$soil_type)
 summary(iris.raw.data$species)
 ```
 
-* Ex: After running this code, both the soil_type and species columns will be stored as factors in the iris.raw.data dataset, making it easier to perform tasks like grouping, summarization, or statistical modeling that depend on categorical variables.
+* Ex: After running this code, both the soil_type and species columns will be stored as factors in the iris.raw.data dataset, making it easier to perform tasks like grouping, summarization, or statistical modeling that depend on categorical variables. 
 
 
 * Where would these go?: 
@@ -121,14 +134,9 @@ Once you are able to read the data into R your next step would be to use the fol
 
 It is important to run an initial exploratory data analysis to understand the distributions of your dataset as the distribution of data directly influences the type of statistical analyses to perform. 
 
-## Check for NAs in the data 
-
-We should start be checking for for NAs in the dataset. NAs within the set mean that there are missing data values. Missing data values can make the row containing the NA less useful to us as the missing information could skew our tests. It is important to consider how dropping NAs might affect your analysis, for instance is the NA in a section of the data that you are not looking to analyze? Consider the possible reasons you might want or not want to drop NAs before doing so. 
-In this dataset there are no NAs. If there were though and we did want to remove them, we could use the function `drop_na()` to omit those rows.
-
 ## Checking Distributions
 
-To explore the distributions of some of the variables we are interested in we can use the simple.eda() function to look at the distributions of the numerical data.
+To explore the distributions of some of the variables we are interested in we can use the simple.eda() function to look at the distributions of the numerical data. The simple.eda() function uses a histogram, boxplot, and Q-Q plot to provide a visual representation of the distribution of one's data. When looking at the results for the simple.eda() function, look for characteristics of a normal distribution such as bell-shaped curve for the histogram, an unskewed boxplot in which the box is equidistant from each end of the whiskers, a central median line in the boxplot, and data points in the Q-Q plot that align the theoretical line. These characteristics represent normality. 
 
 ```{r}
 simple.eda(iris.raw.data$sepal_area)
@@ -156,6 +164,8 @@ The results of the Shapiro test show that all six variables do not follow a norm
 
 ## Log Transform the Data
 
+The code below log transforms the raw data to achieve normality. After log transforming the data, confirm the results using the simple.eda() function again.
+
 ```{r}
 iris.raw.data$log10sepal_length <- log10(iris.raw.data$sepal_length)
 simple.eda(iris.raw.data$log10sepal_length)
@@ -170,11 +180,13 @@ iris.raw.data$log10petal_width <- log10(iris.raw.data$petal_width)
 simple.eda(iris.raw.data$log10petal_width)
 ```
 
-After log transforming the sepal length data, we find that it now follows a normal distribution. It is important for a dataset to be normally distributed for parametric tests as parametric tests use means to calculate statistical differences. Therefore, means need to be appropriately representative for a given data set, provided by a normal distribution.For instance a mean from a a given population that is skewed is not accurately representative of the data. 
+After log transforming the sepal length data, we find that it now follows a normal distribution. It is important for a dataset to be normally distributed for parametric tests as parametric tests use means to calculate statistical differences. Therefore, means need to be appropriately representative for a given data set, provided by a normal distribution. For instance, a mean from a given population that is skewed is not accurately representative of the data. 
 
 After log transforming the petal length data, we found that it did not convert into a normal distribution. What aspect of the data do think is driving this? After reflection, please see below for an explanation!
 
 ## Filter the data by species:
+
+The filter() function allows one to separate and isolate specific data for analysis. Filtering may help organize a dataset because it allows one to extract data that aligns with one's inclusion criteria. Below, the tutorial filters the iris data into separate species with the names of each species serving as the inclusion criteria for that given filter. 
 
 ```{r}
 setosa_data <- iris.raw.data |> 
@@ -194,7 +206,7 @@ simple.eda(setosa_data$log10petal_length)
 simple.eda(versicolor_data$log10petal_length)
 simple.eda(virginica_data$log10petal_length)
 ```
-By separating the data by species, we find that the log transformation of petal length is now normally distributed. 
+By separating the data by species, we find that the log transformation of petal length is now normally distributed. Therefore, it is always important to check the log transformation of a given variable and confirm that it properly transformed the data into a normal distribution. 
 
 
 # Running Data Analysis 
@@ -380,7 +392,7 @@ Similar to what we saw in the GGally plot, we can see that, as the p-value indic
 ```
 
 
-# Summary
+# Tutorial Summary
 
 ### Purpose of each type of test:
 
@@ -437,6 +449,9 @@ I utilized this site for t.test clarification https://www.jmp.com/en_us/statisti
 
 For the discussion of the purpose for normal distibutions and transforming data so it is normally distributed, the following article was used. 
 
+For the explanation of the mutate() function
+https://dplyr.tidyverse.org/reference/mutate.html
+
 Citation:
 Mishra, P., Pandey, C. M., Singh, U., Gupta, A., Sahu, C., & Keshri, A. (2019). Descriptive statistics and normality tests for statistical data. Annals of cardiac anaesthesia, 22(1), 67–72. https://doi.org/10.4103/aca.ACA_157_18
 
@@ -446,7 +461,7 @@ Parts:
 * Instructions were done by Kayla with a couple packages added by Rebecca
 * Importing the dataset was done by Kayla (first import code, head, tail, nrow, glimpse, NAs) and Rebecca (online download code, NAs)
 * Jayden did the Looking into different variables section, Rebecca assisted with factoring code
-* Exploratory Data Analysis section done by Kayla, Rebecca assised with filtering code
+* Exploratory Data Analysis section done by Kayla, Rebecca assisted with filtering code
 * Running Data Analysis section done by Rebecca
 * Summary done by Jayden
 * Formatting done by Rebecca
